# hermes-simulator

./: .env.example  .gitignore  CLAUDE.md  CONCEPTS.md  README.md  STRATEGY.md  pyproject.toml
docs/: benchmark-findings-2026-06-29.md  benchmark-findings-2026-06-30.md  benchmark-findings-2026-07-02.md  evaluation-methodology.html
docs/brainstorms/: 2026-06-28-hermes-model-simulator-requirements.md  2026-07-01-family-persona-and-cost-forward-eval-requirements.md
docs/guides/: vps-unattended-run.md
docs/plans/: 2026-06-28-001-feat-hermes-model-simulator-plan.md  2026-06-30-001-feat-persistent-mcp-gateway-plan.md  2026-07-01-001-feat-family-persona-cost-latency-eval-plan.md
docs/spikes/: 2026-06-28-hermes-feasibility-findings.md
scripts/: build_report.py  patch_hermes_mcp_wait.py
simulator/: __init__.py  __main__.py  config.py  counterparty.py  env.py  harness.py  metrics.py  openrouter.py  pipeline.py  report.py  runner.py
simulator/grading/: __init__.py  behavioral.py  deterministic.py  judge.py  memory_exam.py
simulator/scenarios/: __init__.py  types.py
simulator/world/: __init__.py  _server_common.py  (+6 more)
tests/: _serverkit.py  conftest.py  test_amsterdam_persona.py  test_behavioral.py  test_config.py  test_counterparty.py  test_env.py  test_grading_deterministic.py  test_harness.py  test_integration.py  test_judge.py  test_live_world.py  test_memory_exam.py  test_metrics.py  test_openrouter.py  test_persona.py  test_pipeline.py  test_report.py  test_runner.py  test_stage1.py  test_world.py  test_world_clock.py  test_world_gateway.py  test_world_servers.py
(+9 files in other folders)
